--- a/index.html
+++ b/index.html
@@ -2,26 +2,26 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/stylesIndex.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/stylesIndex.css">
 
 
-  <title>Acceuil</title>
+    <title>Acceuil</title>
 </head>
 
 <body>
-  <div class="container" align="center">
+    <div class="container" align="center">
 
-    <h1 class="titre">BIENVENUE SUR L'APPLICATION DES CTF</h1>
+        <h1 class="titre">BIENVENUE SUR L'APPLICATION DES CTF</h1>
 
-  </div>
+    </div>
 
-  <div class="box1">
+    <div class="box1">
 
-  </div>
-  <a class="bouton1" href="connexion.html">Page Connexion</a>
+    </div>
+    <a class="bouton1" href="app/index.php">Page Connexion</a>
 
 
 </body>
